Add first section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt, magnam repudiandae soluta harum, in expedita nihil sint, beatae sit reprehenderit accusamus sequi similique recusandae excepturi pariatur aut deleniti nobis blanditiis.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero animi labore repellendus, corrupti non voluptas praesentium assumenda, quibusdam blanditiis aut, cumque porro veritatis sed ea? Et, ab distinctio! Quod, aliquid?</p>
+    </div>
     
 </body>
 </html>
