Third Commit Attempt 1

--- a/index.html
+++ b/index.html
@@ -5,13 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>HTML Register Page</title>
 </head>
+
 <body>
-    <div>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt, magnam repudiandae soluta harum, in expedita nihil sint, beatae sit reprehenderit accusamus sequi similique recusandae excepturi pariatur aut deleniti nobis blanditiis.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero animi labore repellendus, corrupti non voluptas praesentium assumenda, quibusdam blanditiis aut, cumque porro veritatis sed ea? Et, ab distinctio! Quod, aliquid?</p>
+
+    <div id="outerBox">
+        <button>About Us</button>
+        <button>Register</button>
     </div>
+
+        <form>
+            <legend>Sign Up</legend>
+            <input type="text" placeholder="Email">
+            <br>
+            <input type="text" placeholder="Username">
+            <br>
+            <input type="password" placeholder="Password">
+            <br>
+            <input type="password" placeholder="Confirm Password">
+            <br>
+            <button id="submit">Submit</button>
+        </form>
+        <footer>
+            <button>test</button>
+        </footer>
+
     
 </body>
+
 </html>
